# escrow

./: .gitignore  Project_Documentation.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
artifacts/: integration-tx-history.jsonl
backend/: .env.example  README.md  package.json
backend/scripts/: integration-testnet.mjs
backend/src/: placeholder.ts  server.ts
backend/src/auth/: adminStore.ts  store.ts  types.ts
backend/src/domain/: buckets.ts  nextActionHint.ts  types.ts
backend/src/integration/: cellDeps.ts  deployment.ts  escrowPayload.ts  loadEnv.ts  paths.ts  runIntegration.ts  txHistory.ts
backend/src/middleware/: auth.ts
backend/src/routes/: adminRoutes.ts  dashboardRoutes.ts
backend/src/store/: jobsStore.ts
contracts/: README.md
contracts/escrow-rust/: Cargo.toml  README.md
contracts/escrow-rust/src/: lib.rs  main.rs
contracts/on-chain-script/: package.json
contracts/on-chain-script-tests/: README.md  package.json  run-jest.cjs
contracts/on-chain-script-tests/src/: index.test.ts
contracts/on-chain-script/src/: index.ts
deployment/: scripts.json  system-scripts.devnet.json
deployment/devnet/escrow-rust/: deployment.toml
deployment/devnet/index.bc/: deployment.toml
deployment/testnet/escrow-rust/: deployment.toml
frontend/: .env.example  index.html  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  AppRouter.tsx  index.css  main.tsx  vite-env.d.ts
report/: weekly-report-week-2.md
scripts/: deploy-testnet-from-env.cjs  setup-tools.ps1
spec/: README.md  dashboard.md  plan-a-escrow-workspace.md
(+147 files in other folders)
